--- a/configuracao.ini
+++ b/configuracao.ini
@@ -1,6 +1,6 @@
 [omie_api]
-app_key = 5702859630468
-app_secret = 1cf8d99fa820c9cc7af243162331d0bf
+app_key = 
+app_secret = 
 base_url_nf = https://app.omie.com.br/api/v1/produtos/nfconsultar/
 base_url_xml = https://app.omie.com.br/api/v1/produtos/dfedocs/
 
