--- a/configuracao.ini
+++ b/configuracao.ini
@@ -1,12 +1,8 @@
 [omie_api]
-app_key = 
-app_secret = 
+app_key = 5702859630468
+app_secret = 1cf8d99fa820c9cc7af243162331d0bf
 base_url_nf = https://app.omie.com.br/api/v1/produtos/nfconsultar/
 base_url_xml = https://app.omie.com.br/api/v1/produtos/dfedocs/
-
-[Functions]
-listar_notas = True
-baixar_xml = True
 
 [query_params]
 start_date = 01/04/2025
@@ -15,16 +11,31 @@ records_per_page = 200
 
 [api_speed]
 calls_per_second = 4
+timeout = 60
+parallel_workers = 4
+
+[Functions]
+listar_notas = True
+baixar_xml = True
 
 [paths]
 caminho_config_ini = C:/milson/extrator_omie_v3/configuracao.ini
 resultado_dir = C:/milson/extrator_omie_v3/resultado
+log_dir = log
 db_name = omie.db
 
 [compactador]
 arquivos_por_pasta = 10000
+arquivo_zip_prefix = omie_compactado
 
 [ONEDRIVE]
 upload_onedrive = false
 pasta_destino = Anexos e temporarios/notas ng/pastas completas
+
+[log]
+log_level = INFO
+
+[retries]
+max_retries = 3
+
 
